--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
       "version": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
-      "ci:publish": "lerna publish from-package --yes"
+      "ci:publish": "lerna publish from-package --yes",
+      "publish": "lerna publish"
 
   },
   "devDependencies": {
