--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-      "version": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
+      "#version": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
       "ci:publish": "lerna publish from-package --yes",
       "publish": "lerna publish"
 
