--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
       "#version": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
       "ci:publish": "lerna publish from-package --yes",
-      "publish": "lerna publish"
-
+      "publish": "lerna publish",
+      "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
