fix: update package

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          # pulls all commits (needed for lerna / semantic release to correctly version)
+          fetch-depth: "0"
       - name: setup node
         uses: actions/setup-node@v1
         with:
@@ -19,9 +22,8 @@ jobs:
           # registry-url: https://repository.mark43.io/artifactory/api/npm/npm-all/
           #
           # https://github.com/lerna/lerna/issues/2542
-          # pulls all commits (needed for lerna / semantic release to correctly version)
-          fetch-depth: "0"
           # pulls all tags (needed for lerna / semantic release to correctly version)
       - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+      - run: npm install
       - run: npm run bootstrap
       - run: npm run publish
