--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,4 +21,10 @@ jobs:
       - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - run: npm install
       - run: npm run bootstrap
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
       - run: npm run publish
+        env:
+            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
