--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,9 @@ jobs:
           fetch-depth: "0"
       - name: setup node
         uses: actions/setup-node@v1
+        with:
+            node-version: '12.x'
+            registry-url: 'https://registry.npmjs.org'
       # https://github.com/lerna/lerna/issues/2542
       # pulls all tags (needed for lerna / semantic release to correctly version)
       - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
