--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
           # https://github.com/lerna/lerna/issues/2542
           # pulls all commits (needed for lerna / semantic release to correctly version)
           fetch-depth: "0"
+          ref: ${GITHUB_REF##*/}
       - name: setup node
         uses: actions/setup-node@v1
         with:
@@ -29,9 +30,3 @@ jobs:
       - run: npm run publish
         env:
             NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Merge bump version commit
-        uses: devmasx/merge-branch@v1.3.1
-        with:
-          type: now
-          from_branch: ${GITHUB_REF##*/}
-          target_branch: ${GITHUB_REF##*/release_}
