--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "#version": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
     "ci:publish": "lerna publish from-package --yes",
-    "publish": "lerna publish --yes --no-push && git push --tags",
+    "publish": "lerna publish --yes --no-push && git push --tags && git push",
     "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
