--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "#version": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
     "ci:publish": "lerna publish from-package --yes",
     "publish": "lerna publish --yes --no-push && git push --tags && git push",
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap",
+    "deploy": "git checkout -b release_master && git push -u && git branch --delete origin release_master"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
