fix: one more thing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ci:publish": "lerna publish from-package --yes",
     "publish": "lerna publish --yes --no-push && git push --tags && git push",
     "bootstrap": "lerna bootstrap",
-    "deploy": "git checkout -b release_master && git push -u && git branch --delete origin release_master"
+    "deploy": "git checkout -b release_master && git push -u && git checkout master && git push --delete origin release_master"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
