--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,16 +8,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch_to_merge_into;]$(echo ${GITHUB_REF#refs/heads/release_})"
-        id: extract_branch
       - uses: actions/checkout@v2
         with:
           # https://github.com/lerna/lerna/issues/2542
           # pulls all commits (needed for lerna / semantic release to correctly version)
           fetch-depth: "0"
-          ref: ${{ steps.extract_branch.outputs.branch_to_merge_into }}
       - name: setup node
         uses: actions/setup-node@v1
         with:
@@ -31,6 +26,13 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-      - run: npm run publish
+      - run: npm run ci:publish
         env:
             NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Merge by labeled
+        uses: devmasx/merge-branch@v1.3.1
+                  type: now
+          target_branch: uat
+          github_token: ${{ github.token }}
+
