--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "version": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
+    "Vversion": "lerna version --no-push && git tag -d $(git describe --abbrev=0)",
+    "tag": "lerna version --ignore-changes",
     "ci:publish": "lerna publish from-package --yes",
     "publish": "lerna publish --yes --no-push && git push --tags && git push",
     "bootstrap": "lerna bootstrap",
