--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,18 @@
-name: Deploy stuff
+name: Deploy
+
 on:
-  push:
-  create:
-    branches:
-      - release_*
+  pull_request:
+  branches: 
+    - release_*
+  types: [closed]
+
 jobs:
   deploy:
+    ## Only execute on merged PR
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+    - name: pull request
       - uses: actions/checkout@v2
         with:
           # https://github.com/lerna/lerna/issues/2542
@@ -28,11 +33,11 @@ jobs:
           git config user.email github-actions@github.com
       - run: npm run ci:publish
         env:
-            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Merge by labeled
-        uses: devmasx/merge-branch@v1.3.1
-                  type: now
-          target_branch: uat
-          github_token: ${{ github.token }}
-
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: get published version
+          id: version
+          uses: notiz-dev/github-action-json-property@release
+          with:
+            path: 'lerna.json'
+            prop_path: 'version'
+          - run: git tag v${{steps.version.outputs.prop}} && git push --tags
