--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,15 +2,13 @@ name: Deploy
 
 on:
   pull_request:
-    branches:
-      - release_*
     types:
       - closed
 
 jobs:
   deploy:
     ## Only execute on merged PR
-    #if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
