--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "version": "lerna version --no-push --yes && git tag -d $(git describe --abbrev=0) && git push",
+    "local:version": "lerna version --no-push --yes && git tag -d $(git describe --abbrev=0) && git push",
     "ci:publish": "lerna publish from-package --yes --no-push && git push --tags && git push",
     "bootstrap": "lerna bootstrap",
     "deploy": "git checkout -b release_master && git push -u && git checkout master && git push --delete origin release_master",
-    "local:publish": "git checkout -b release_$(date +%s) && git push -u && npm run version"
+    "local:publish": "git checkout -b release_$(date +%s) && git push -u && npm run local:version"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
