--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
+    "v": "lerna version --no-push --yes",
     "local:version": "lerna version --no-push --yes && git tag -d $(git describe --abbrev=0) && git push",
     "ci:publish": "lerna publish from-package --yes --no-push && git push --tags && git push",
     "bootstrap": "lerna bootstrap",
