--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "private": true,
   "scripts": {
     "v": "lerna version --no-push --yes",
-    "local:version": "lerna version --no-push --yes && git tag -d $(git describe --abbrev=0) && git push",
+    "local:version": "lerna version --no-push --yes && git tag -d $(git describe --abbrev=0) && git push && git checkout master",
     "ci:publish": "lerna publish from-package --yes --no-push && git push --tags && git push",
     "bootstrap": "lerna bootstrap",
     "deploy": "git checkout -b release_master && git push -u && git checkout master && git push --delete origin release_master",
     "test-deploy": "git checkout -b release_master && git push -u && git checkout master && git push --delete origin release_master",
     "local:publish": "git checkout -b release_$(date +%s) && git push -u && npm run local:version",
-    "test:publish": "git checkout -b test_$(date +%s) && git push -u && npm run local:version",
     "update": "echo '1' >> packages/bishop/lib/bishop.js && git add -u && git commit -m \"fix: fix\""
   },
   "devDependencies": {
