--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,6 +39,11 @@ jobs:
         with:
           path: 'lerna.json'
           prop_path: 'version'
+      ### Set the user in the gitconfig
+      ### so that it can properly push the tag
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
       ### Finally, after publishing, tag the version
       ### We must use an annotated tag in order for lerna's versioning to work properly
       - run: git tag -a v${{steps.version.outputs.prop}} -m v${{steps.version.outputs.prop}} && git push --tags
