--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,10 @@ jobs:
           # https://github.com/lerna/lerna/issues/2542
           # pulls all commits (needed for lerna / semantic release to correctly version)
           fetch-depth: "0"
+          ### After merging, we want to checkout the commit before merge,
+          ### and tag that (not the merge commit, since things
+          ### may have changed on the target branch)
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: setup node
         uses: actions/setup-node@v1
         with:
