--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
           ### After merging, we want to checkout the merged branch,
           ### and tag that (not the merge commit, since things
           ### may have changed on the target branch)
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: setup node
         uses: actions/setup-node@v1
         with:
